--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,26 @@
-<html>
-<head></head>
-<body>
-<form method='POST'>
-  {{ form.hidden_tag() }}
+{% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
-  {{ form.username() }} </br>
+{% block title %}
+Login
+{% endblock %}
 
-  {{ form.password() }} </br>
-  <button type="submit" value="Login" name="login">Log In</button>
+{% block styles %}
+{{super()}}
+<link rel="stylesheet" href="{{url_for('.static', filename='signin.css')}}">
+{% endblock %}
 
-</body>
+{% block content %}
+    <div class="container">
+
+      <form class="form-signin" method="POST" action="/login">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        {{ form.hidden_tag() }}
+        {{ wtf.form_field(form.username) }}
+        {{ wtf.form_field(form.password) }}
+        {{ wtf.form_field(form.remember) }}
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+
+    </div> <!-- /container -->
+{% endblock %}
