--- a/templates/login.html
+++ b/templates/login.html
@@ -11,28 +11,26 @@ Login
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-info" role="alert">
-            {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
-{% endwith %}
-</div>
+    <div class="container-fluid">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-info" role="alert">
+                    {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
 
-<div class="container">
-
-  <form class="form-signin" method="POST" action="/login">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    {{ form.hidden_tag() }}
-    {{ wtf.form_field(form.username) }}
-    {{ wtf.form_field(form.password) }}
-    {{ wtf.form_field(form.remember) }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
-
-</div> <!-- /container -->
+    <div class="container">
+        <form class="form-signin" method="POST" action="/login">
+            <h2 class="form-signin-heading">Welcome to mini_auction, please sign in</h2>
+            {{ form.hidden_tag() }}
+            {{ wtf.form_field(form.username) }}
+            {{ wtf.form_field(form.password) }}
+            {{ wtf.form_field(form.remember) }}
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+    </div> <!-- /container -->
 {% endblock %}
