--- a/templates/register.html
+++ b/templates/register.html
@@ -11,29 +11,28 @@ Register User
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-<div class="container-fluid">
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-info" role="alert">
-            {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
-{% endwith %}
-</div>
+    <div class="container-fluid">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-info" role="alert">
+                    {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        </div>
 
-<div class="container">
+        <div class="container">
 
-  <form class="form-signin" method="POST" action="/register_user">
-    <h2 class="form-signin-heading">Sign Up</h2>
-    {{ form.hidden_tag() }}
-    {{ wtf.form_field(form.username) }}
-    {{ wtf.form_field(form.email) }}
-    {{ wtf.form_field(form.password) }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
-  </form>
+        <form class="form-signin" method="POST" action="/register">
+            <h2 class="form-signin-heading">Sign Up</h2>
+            {{ form.hidden_tag() }}
+            {{ wtf.form_field(form.username) }}
+            {{ wtf.form_field(form.email) }}
+            {{ wtf.form_field(form.password) }}
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+        </form>
 
-</div> <!-- /container -->
+    </div> <!-- /container -->
 {% endblock %}
