UI changes from AWS host

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,6 +10,7 @@ Dashboard
 {% endblock %}
 
 {% block content %}
+{% block navbar %}
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -34,4 +35,5 @@ Dashboard
       </div>
     </div>
   </nav>
+{% endblock %}
 {% endblock %}
